сделал разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -1,12 +1,278 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <section>
+      <h2>ТЕХНОМАРТ</h2>
+      <ul>
+        <li>
+          <img src="img/search.svg" width="17" height="17" alt="поиск">
+          <input type="search" placeholder="Поиск">
+        </li>
+        <li>
+          <img src="img/bookmark.svg" width="14" height="15" alt="значек закладки">
+          Закладки: <span>0</span>
+        </li>
+        <li>
+          <img src="img/cart.svg" alt="корзина">
+          Корзина: <span>0</span>
+        </li>
+      </ul>
+      <p>
+        Оформить заказ
+      </p>
+    </section>
+
+    <section>
+      <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
+      <p>
+        <img src="img/phone.svg" width="17" height="19" alt="значек телефона">Телефон: <a
+          href="tel:+78125550555">+7(812)555-05-55</a>
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+      </p>
+      <img src="img/login.svg" width="20" height="17" alt="кнопка войти">
+      <a href="#">Войти</a>
+      <a href="#">Регистрация</a>
+    </section>
+
+    <section>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </section>
+
+  </header>
+
+  <main>
+    <h2>Преимущества</h2>
+    <ul>
+      <li>
+        <h3>Материалы</h3>
+        <p>на любой вкус</p>
+        <img src="img/materials.svg" width="44" height="65" alt="ведро">
+      </li>
+      <li>
+        <h3>Инструменты</h3>
+        <p>на все случаи</p>
+        <img src="img/drill.svg" width="75" height="61" alt="дрель">
+      </li>
+      <li>
+        <h3>Техника</h3>
+        <p>для стройки</p>
+        <img src="img/tractor.svg" width="78" height="62" alt="трактор">
+      </li>
+      <li>
+        <h3>Скидка 50%</h3>
+        <p>на 350 товаров</p>
+        <img src="img/truck.svg" width="59" height="71" alt="тележка">
+      </li>
+      <li>
+        <h3>Доставка</h3>
+        <p>бесплатно</p>
+        <img src="img/car.svg" width="78" height="63" alt="дрель">
+      </li>
+    </ul>
+    <section>
+      <figure>
+        <h3>перфораторы</h3>
+        <p>Настоящие мужские игрушки</p>
+        <a href="#">
+          <img src="img/perforators.png" width="620" height="266" alt="Перфораторы">
+        </a>
+      </figure>
+      <a href="#">открыть каталог</a>
+      <button type="button" disabled>Назад</button>
+      <button type="button">Вперед</button>
+    </section>
+    <section>
+      <h2>популярные товары:</h2>
+      <p>все популярные товары</p>
+      <ul>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 9000</h3>
+            <p>32500 Р.</p>
+            <p>
+              <img src="img/bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+            </p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <P>22500 Р.</P>
+            <p>
+              <img src="img/bfg3000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+            </p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>
+              <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            </p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <p>12500 Р.</p>
+            <p>
+              <img src="img/bfg2000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+            </p>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>популярные производители:</h2>
+      <p>все производители</p>
+      <ul>
+        <li> <img src="img/bosch.png" width="220" height="145" alt="BOSCH"></li>
+        <li> <img src="img/makita.png" width="220" height="145" alt="makita"></li>
+        <li> <img src="img/dewalt.png" width="220" height="145" alt="dewalt"></li>
+        <li> <img src="img/interkom.png" width="220" height="145" alt="interkom"></li>
+        <li> <img src="img/hitachi.png" width="220" height="145" alt="hitachi"></li>
+        <li> <img src="img/aeg.png" width="220" height="145" alt="aeg"></li>
+        <li> <img src="img/metabo.png" width="220" height="145" alt="metabo"></li>
+      </ul>
+
+    </section>
+    <section>
+      <h2>сервисы</h2>
+      <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+      <form>
+        <input type="radio" name="service" id="delivery-field" checked>
+        <label for="delivery-field">Доставка</label>
+
+        <input type="radio" name="service" id="guarantee-field" checked>
+        <label for="guarantee-field">Гарантия</label>
+
+        <input type="radio" name="service" id="credit-field" checked>
+        <label for="credit-field">Кредит</label>
+
+      </form>
+
+      <div>
+        <h3>доставка</h3>
+        <p>Мы с удовольствием доставим ваш товар прямо <br>
+          к вашему подъезду совершенно бесплатно!<br>
+          Ведь мы неплохо заработаем, <br>
+          поднимая его на ваш этаж!</p>
+        <img src="img/bigtruck.png" width="468" height="261" alt="грузовик">
+      </div>
+      <div>
+        <h3>гарантия</h3>
+        <p>Если купленный у нас товар поломается или заискрит, <br>
+          а также в случае пожара, спровоцированного его <br>
+          возгоранием, вы всегда можете быть уверены в нашей <br>
+          гарантии. Мы обменяем сгоревший товар на новый. <br>
+          Дом уж восстановите как-нибудь сами.</p>
+        <img src="img/medal.svg" width="389" height="283" alt="медаль">
+      </div>
+      <div>
+        <h3>кредит</h3>
+        <p>Залезть в долговую яму стало проще! <br>
+          Кредитные консультанты придут вам на помощь.</p>
+        <img src="img/credit.svg" width="465" height="285" alt="кредит">
+        <a href="#">отправить заявку</a>
+      </div>
+
+    </section>
+
+    <section>
+      <h2>КОМПАНИЯ «Техномарт»</h2>
+      <p>
+        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для <br>
+        ремонта и строительства не оставит равнодушными любителей сэкономить на <br>
+        гастарбайтерах.</p>
+      <p>
+        Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+        Техномарт работает со многими транспортными компаниями:
+      </p>
+      <ul>
+        <li><b>Деловые линии</b></li>
+        <li><b>Автотрейдинг</b></li>
+        <li><b>ЖелДорЭкспедиция</b></li>
+      </ul>
+      <a href="#">подробнее о компании</a>
+    </section>
+    <section>
+      <h2>контакты</h2>
+      <p>Вы можете забрать товар сами, <br>
+        заехав в наш офис:</p>
+      <img src="img/map.png" width="300" height="158" alt="карта">
+      <button type="button">Заблудились? Напишите НАМ!</button>
+    </section>
+
+  </main>
+
+  <footer>
+    <img src="img/logo.png" width="220" height="68" alt="логотип">
+    <section>
+      <p>
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+        +7 (812) 555-05-55
+      </p>
+    </section>
+    <section>
+      <ul>
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструменты</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </section>
+    <p>
+      © 2010–2019 Компания «Техномарт» Все права защищены
+    </p>
+
+    <section>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </section>
+    <p>
+      Обратная связь: <br>
+      <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    </p>
+    <p>
+      Разработано:
+      <a href="https://htmlacademy.ru">https://htmlacademy.ru</a>
+    </p>
+
+  </footer>
+
+</body>
+
 </html>
