поправил по замечаниям

--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
       <h2>ТЕХНОМАРТ</h2>
       <ul>
         <li>
-          <img src="img/search.svg" width="17" height="17" alt="поиск">
+          <a href="#"><img src="img/search.svg" width="17" height="17" alt="поиск"></a>
           <input type="search" placeholder="Поиск">
         </li>
         <li>
-          <img src="img/bookmark.svg" width="14" height="15" alt="значек закладки">
+          <a href="#"><img src="img/bookmark.svg" width="14" height="15" alt="значек закладки"></a>
           Закладки: <span>0</span>
         </li>
         <li>
-          <img src="img/cart.svg" alt="корзина">
+          <a href="#"><img src="img/cart.svg" width="17" height="17" alt="корзина"></a>
           Корзина: <span>0</span>
         </li>
       </ul>
-      <p>
-        Оформить заказ
-      </p>
+      <a href="#">Оформить заказ</a>
     </section>
 
     <section>
@@ -87,14 +85,16 @@
       </li>
     </ul>
     <section>
-      <figure>
-        <h3>перфораторы</h3>
-        <p>Настоящие мужские игрушки</p>
-        <a href="#">
+      <ul class="slider-list">
+        <li class="slider-item">
+          <h3>перфораторы</h3>
+          <p>Настоящие мужские игрушки</p>
+          <a href="#">
           <img src="img/perforators.png" width="620" height="266" alt="Перфораторы">
-        </a>
-      </figure>
-      <a href="#">открыть каталог</a>
+          </a>
+          <a href="#">открыть каталог</a>
+        </li>
+      </ul>
       <button type="button" disabled>Назад</button>
       <button type="button">Вперед</button>
     </section>
@@ -246,7 +246,7 @@
       </ul>
     </section>
     <p>
-      © 2010–2019 Компания «Техномарт» Все права защищены
+      © 2010–2019 Компания «Техномарт»Все права защищены
     </p>
 
     <section>
