поправил по замечаниям, добавил разметку каталога

--- a/catalog.html
+++ b/catalog.html
@@ -62,58 +62,48 @@
   </header>
 
   <main>
-    <h2>Преимущества</h2>
-    <ul>
-      <li>
-        <h3>Материалы</h3>
-        <p>на любой вкус</p>
-        <svg height="65" width="44"><use xlink:href="#materials"></use></svg>
-      </li>
-      <li>
-        <h3>Инструменты</h3>
-        <p>на все случаи</p>
-        <svg height="61" width="75"><use xlink:href="#drill"></use></svg>
-      </li>
-      <li>
-        <h3>Техника</h3>
-        <p>для стройки</p>
-        <svg height="62" width="78"><use xlink:href="#tractor"></use></svg>
-      </li>
-      <li>
-        <h3>Скидка 50%</h3>
-        <p>на 350 товаров</p>
-        <svg height="71" width="59"><use xlink:href="#truck"></use></svg>
-      </li>
-      <li>
-        <h3>Доставка</h3>
-        <p>бесплатно</p>
-        <svg height="63" width="78"><use xlink:href="#car"></use></svg>
-      </li>
-    </ul>
     <section>
-      <ul class="slider-list">
-        <li class="slider-item">
-          <h3>перфораторы</h3>
-          <p>Настоящие мужские игрушки</p>
-          <a href="#">
-          <img src="img/perforators.png" width="620" height="266" alt="Перфораторы">
-          </a>
-          <a href="#">открыть каталог</a>
-        </li>
+      <svg height="12" width="14"><use xlink:href="#catalog-home"></use></svg>
+      <ul>
+        <li>каталог</li>
+        <li>инструменты</li>
+        <li>перфораторы</li>
       </ul>
-      <button type="button" disabled>Назад</button>
-      <button type="button">Вперед</button>
+    </section>
+    <h2>перфораторы</h2>
+    <section>
+      <h3>сортировка</h3>
+      <form>
+        <input type="radio" name="sort" id="price-field" checked>
+        <label for="price-field">по цене</label>
+
+        <input type="radio" name="sort" id="type-field" checked>
+        <label for="type-field">по типу</label>
+
+        <input type="radio" name="sort" id="function-field" checked>
+        <label for="function-field">по функционалу</label>
+      </form>
+      <button type="button" disabled>вверх</button>
+      <button type="button">вниз</button>
     </section>
     <section>
-      <h2>популярные товары:</h2>
-      <p>все популярные товары</p>
       <ul>
         <li>
           <a href="#">
-            <h3>Перфоратор BOSCH BFG 9000</h3>
-            <p>32500 Р.</p>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
             <p>
-              <img src="img/bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            </p>
+            <p>25500 Р.</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>
+              <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
             </p>
             <p>25500 Р.</p>
           </a>
@@ -147,88 +137,65 @@
             <p>12500 Р.</p>
           </a>
         </li>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <P>22500 Р.</P>
+            <p>
+              <img src="img/bfg3000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+            </p>
+            <p>15500 Р.</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>
+              <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            </p>
+            <p>25500 Р.</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <p>
+              <img src="img/bfg2000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+            </p>
+            <p>12500 Р.</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <button type="button">купить</button>
+            <button type="button">в закладки</button>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+          </a>
+        </li>
       </ul>
-    </section>
-    <section>
-      <h2>популярные производители:</h2>
-      <p>все производители</p>
       <ul>
-        <li> <img src="img/bosch.png" width="220" height="145" alt="BOSCH"></li>
-        <li> <img src="img/makita.png" width="220" height="145" alt="makita"></li>
-        <li> <img src="img/dewalt.png" width="220" height="145" alt="dewalt"></li>
-        <li> <img src="img/interkom.png" width="220" height="145" alt="interkom"></li>
-        <li> <img src="img/hitachi.png" width="220" height="145" alt="hitachi"></li>
-        <li> <img src="img/aeg.png" width="220" height="145" alt="aeg"></li>
-        <li> <img src="img/metabo.png" width="220" height="145" alt="metabo"></li>
+        <li>
+          <a >1</a>
+        </li>
+        <li>
+          <a href="#">2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">следующая</a>
+        </li>
       </ul>
-
     </section>
     <section>
-      <h2>сервисы</h2>
-      <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-      <form>
-        <input type="radio" name="service" id="delivery-field" checked>
-        <label for="delivery-field">Доставка</label>
-
-        <input type="radio" name="service" id="guarantee-field" checked>
-        <label for="guarantee-field">Гарантия</label>
-
-        <input type="radio" name="service" id="credit-field" checked>
-        <label for="credit-field">Кредит</label>
-
-      </form>
-
-      <div>
-        <h3>доставка</h3>
-        <p>Мы с удовольствием доставим ваш товар прямо <br>
-          к вашему подъезду совершенно бесплатно!<br>
-          Ведь мы неплохо заработаем, <br>
-          поднимая его на ваш этаж!</p>
-        <img src="img/bigtruck.png" width="468" height="261" alt="грузовик">
-      </div>
-      <div>
-        <h3>гарантия</h3>
-        <p>Если купленный у нас товар поломается или заискрит, <br>
-          а также в случае пожара, спровоцированного его <br>
-          возгоранием, вы всегда можете быть уверены в нашей <br>
-          гарантии. Мы обменяем сгоревший товар на новый. <br>
-          Дом уж восстановите как-нибудь сами.</p>
-        <img src="img/medal.png" width="389" height="283" alt="медаль">
-      </div>
-      <div>
-        <h3>кредит</h3>
-        <p>Залезть в долговую яму стало проще! <br>
-          Кредитные консультанты придут вам на помощь.</p>
-        <img src="img/credit.png" width="465" height="285" alt="кредит">
-        <a href="#">отправить заявку</a>
-      </div>
-
-    </section>
-
-    <section>
-      <h2>КОМПАНИЯ «Техномарт»</h2>
-      <p>
-        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для <br>
-        ремонта и строительства не оставит равнодушными любителей сэкономить на <br>
-        гастарбайтерах.</p>
-      <p>
-        Мы можем доставить ваш товар в самые отдаленные точки России! <br>
-        Техномарт работает со многими транспортными компаниями:
-      </p>
-      <ul>
-        <li><b>Деловые линии</b></li>
-        <li><b>Автотрейдинг</b></li>
-        <li><b>ЖелДорЭкспедиция</b></li>
-      </ul>
-      <a href="#">подробнее о компании</a>
-    </section>
-    <section>
-      <h2>контакты</h2>
-      <p>Вы можете забрать товар сами, <br>
-        заехав в наш офис:</p>
-      <img src="img/map.png" width="300" height="158" alt="карта">
-      <button type="button">Заблудились? Напишите НАМ!</button>
+      <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+        В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </section>
 
   </main>
@@ -285,6 +252,7 @@
 </body>
 
 </html>
+
 
 <svg width="0" height="0" class="hidden">
   <symbol viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg" id="bookmark">
