--- a/catalog.html
+++ b/catalog.html
@@ -1,82 +1,84 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-    rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-</head>
-
-<body class="page-body">
-  <header class="main-header">
-    <section class="main-menu">
-      <a>
-        <h2 class="main-header-logo">ТЕХНОМАРТ</h2>
-      </a>
-      <ul class="main-menu-items">
-        <li>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  
+  <body class="page-body">
+    <header class="main-header">
+      <section class="main-menu">
+        <a>
+          <img src="img/logo-technomart.png" width="108" height="18">
+        </a>
+        <ul class="main-menu-items">
+          <li>
+            <a href="#">
+              <svg height="17" width="17">
+                <use xlink:href="#search"></use>
+              </svg>
+            </a>
+            <span ><input type="search" placeholder="Поиск"></span>
+          </li>
+          <li>
+            <a href="#">
+              <svg height="14" width="15">
+                <use xlink:href="#bookmark"></use>
+              </svg>
+              <span> Закладки: 0</span>
+            </a>
+  
+          </li>
+          <li>
+            <a href="#">
+              <svg height="17" width="17">
+                <use xlink:href="#cart"></use>
+              </svg>
+              <span>Корзина: 0</span>
+            </a>
+          </li>
+        </ul>
+        <a class="menu-button" href="#">Оформить заказ</a>
+      </section>
+  
+      <section class="main-info">
+        <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
+        <p class="main-contacts">
+          <span><a href="tel:+78125550555"><svg height="17" width="19">
+                <use xlink:href="#phone"></use>
+              </svg> +7(812)555-05-55 </a></span>
+        </p>
+        <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+        <p class="main-login">
           <a href="#">
-            <svg height="17" width="17">
-              <use xlink:href="#search"></use>
-            </svg>
-          </a>
-          <span>Поиск: <input type="search"></span>
-        </li>
-        <li>
+            <svg height="17" width="20">
+              <use xlink:href="#login"></use>
+            </svg> Войти</a>
           <a href="#">
-            <svg height="14" width="15">
-              <use xlink:href="#bookmark"></use>
-            </svg>
-            <span> Закладки: 0</span>
-          </a>
-
-        </li>
-        <li>
-          <a href="#">
-            <svg height="17" width="17">
-              <use xlink:href="#cart"></use>
-            </svg>
-            <span>Корзина: 0</span>
-          </a>
-        </li>
-      </ul>
-      <a class="menu-button" href="#">Оформить заказ</a>
-    </section>
-
-    <section class="main-info">
-      <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
-      <p class="main-contacts">
-        <span><a href="tel:+78125550555"><svg height="17" width="19">
-              <use xlink:href="#phone"></use>
-            </svg> +7(812)555-05-55 </a></span>
-      </p>
-      <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
-      <p class="main-login">
-        <a href="#"><svg height="17" width="20">
-            <use xlink:href="#login"></use>
-          </svg> Войти</a>
-        <a href="#">Регистрация</a>
-      </p>
-    </section>
-
-
-    <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
-  </header>
+            Регистрация</a>
+        </p>
+      </section>
+  
+  
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
 
   <main class="container">
     <section class="catalog-nav-items">
@@ -221,7 +223,7 @@
 
   <footer class="page-footer main-footer">
     <section class="footer-info">
-      <img src="img/logo.png" width="220" height="68" alt="логотип">
+      <img src="img/footer-logo.png" width="220" height="68" alt="логотип">
       <section class="footer-contacts">
         <p>
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
@@ -273,6 +275,31 @@
     </section>
 
   </footer>
+  <section class="modal">
+    <form class="mail-form" action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label class="visually-hidden" for="nema-form">Ваше имя:</label>
+        <input class="name-user" id="name-form" type="text" name="name" placeholder="Имя Фамилия">
+      </p>
+      <p>
+        <label class="visually-hidden" for="email-form">Ваш e-mail:</label>
+        <input class="email-user" id="email-form" type="email" name="login" placeholder="email@example.com">
+      </p>
+      <p>
+        <lebel for="textarea">Текст письма:</lebel><br>
+        <textarea id="textarea" rows="3" >В свободной форме </textarea><br>
+      </p>
+      
+      <button class="button" type="submit">ОТПРАВИТЬ</button>
+    </form>
+    <button type="button">Закрыть</button>
+  </section>
+
+  <section class="modal">
+    <!-- Здесь будет карта -->
+    <button type="button">Закрыть</button>
+  </section>
+
   <svg width="0" height="0" class="hidden">
     <symbol viewBox="0 0 14 16" xmlns="http://www.w3.org/2000/svg" id="bookmark">
       <path
@@ -303,10 +330,10 @@
         fill="#FFFFFF"></path>
     </symbol>
     <symbol viewBox="0 0 20 17" xmlns="http://www.w3.org/2000/svg" id="login">
-      <path d="M14.167 8.5L5.714 0v6H0v5h5.714v6l8.453-8.5z" fill="#C5C5C5"></path>
+      <path d="M14.167 8.5L5.714 0v6H0v5h5.714v6l8.453-8.5z"></path>
       <path
-        d="M16.177 15.01H11.39V17h4.787c2.074 0 2.861-1.81 2.885-3.026V3.028C19.038 1.811 18.252 0 16.177 0H11.39v1.99h4.787c.8 0 .945.681.962 1.057v10.904c-.016.376-.163 1.059-.962 1.059z"
-        fill="#C5C5C5"></path>
+        d="M16.177 15.01H11.39V17h4.787c2.074 0 2.861-1.81 2.885-3.026V3.028C19.038 1.811 18.252 0 16.177 0H11.39v1.99h4.787c.8 0 .945.681.962 1.057v10.904c-.016.376-.163 1.059-.962 1.059z">
+      </path>
     </symbol>
     <symbol viewBox="0 0 44 65" fill="none" xmlns="http://www.w3.org/2000/svg" id="materials">
       <path
